--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,7 +29,7 @@ repos:
     hooks:
       - id: custom-docstring-check
         name: Custom docstring coverage (per file)
-        entry: python -m src.cli
+        entry: python -m autodocstring.cli
         language: python
         types: [python]
         pass_filenames: true
